--- a/service.html
+++ b/service.html
@@ -80,8 +80,8 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
-                <a href="project.html" class="nav-item nav-link">Projects</a>
-                <div class="nav-item dropdown">
+                <a href="Products.html" class="nav-item nav-link">Products</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="feature.html" class="dropdown-item">Features</a>
@@ -90,10 +90,11 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
-                </div>
+                </div> -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
-                <a href="#" class="nav-item nav-link" data-bs-toggle="modal" data-bs-target="#signInModal">Sign In</a>
-                <a href="#" class="nav-item nav-link" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign Up</a>
+                <a href="#" class="nav-item nav-link" data-bs-toggle="modal" data-bs-target="#userAuthModal">
+                    <i class="fa fa-user"></i>
+                </a>
                 <a href="#" class="nav-item nav-link position-relative" data-bs-toggle="modal" data-bs-target="#cartModal">
                     <i class="fa fa-shopping-cart"></i> Cart
                     <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
